# BICUBIC_FLUTTER

./: .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  INSTRUCTIONS.MD  README.md  pubspec.yaml
android/: CMakeLists.txt
android/src/main/: AndroidManifest.xml
doc/: api.md
example/: README.md
example/android/app/: build.gradle.kts
example/ios/: Podfile
example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  (+1 more)
example/test/: widget_test.dart
flutter_bicubic_resize/: CHANGELOG.md  README.md  pubspec.yaml
flutter_bicubic_resize/.dart_tool/: package_config.json  package_graph.json
flutter_bicubic_resize/android/: build.gradle
flutter_bicubic_resize/example/: .flutter-plugins-dependencies  pubspec.yaml
flutter_bicubic_resize/example/.dart_tool/: package_config.json  package_graph.json
flutter_bicubic_resize/example/lib/: main.dart
flutter_bicubic_resize/ios/: flutter_bicubic_resize.podspec
flutter_bicubic_resize/lib/src/: bicubic_resizer.dart  native_bindings.dart  resize_isolate.dart
flutter_bicubic_resize/src/: resize.c  resize.h
flutter_bicubic_resize/test/: bicubic_resizer_test.dart
ios/: flutter_bicubic_resize.podspec
ios/Classes/: FlutterBicubicResizePlugin.swift
ios/src/: resize.c  resize.h
lib/: flutter_bicubic_resize.dart
lib/src/: bicubic_resizer.dart  native_bindings.dart
src/: resize.c  resize.h
test/: bicubic_resizer_test.dart
(+5 files in other folders)
